initial test with rsnapshot-server and rsnapshot-client

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,9 @@
 ---
 
-rsnapshot_master_host: False
-rsnapshot_master_host_user:  "{{ ansible_ssh_user }}"
+#rsnapshot_master_host: False    # Must be defined
+rsnapshot_master_host: mag    # Must be defined
+rsnapshot_master_host_user: root
+# rsnapshot_master_host_user:  "{{ ansible_ssh_user }}"
 rsnapshot_master_ssh_key: id_rsa
 
 # User used by the rsnapshot master to connect on the configured host
